--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+            <%= image_tag @book.user.get_profile_image, size:"50x50" %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
@@ -22,7 +22,43 @@
               <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
             <% end %>
         </tr>
+        <div>
+          <tr>
+            <tb>
+              <p>コメント数：<%= @book.book_comments.count %></p>
+                <% @book.book_comments.each do |book_comment| %>
+              <p><%= image_tag book_comment.user.get_profile_image, size:"50x50" %></p>
+                <%= book_comment.user.name %>
+                <%#<%= book_comment.created_at.strftime('%Y/%m/%d') %>   <%#<%= book_comment.comment %>
+                <% if book_comment.user == current_user %>
+                <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
+                <% end %>
+                <% end %>
+                
+                <% if @book.favorited_by?(current_user) %>
+                  <p>
+                    <%= link_to book_favorites_path(@book), method: :delete do %>
+                      ♥<%= @book.favorites.count %> いいね
+                    <% end %>
+                  </p>
+                    <% else %>
+                  <p>
+                    <%= link_to book_favorites_path(@book), method: :post do %>
+                      ♡<%= @book.favorites.count %> いいね
+                    <% end %>
+                  </p>
+                    <% end %>
+            </tb>
+          </tr>
+        </div>
       </table>
+        <div>
+          <%= form_with model: [@book, @book_comment] do |f| %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+            <%= f.submit "送信する" %>
+          <% end %>
+        </div>
+
     </div>
   </div>
 </div>
