--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>Bookers2Ver2</title>
@@ -10,10 +11,21 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
-      <main>
+     <div class="container">
+      <div class="row">
+       <div class="col-md-3">
+       </div>
+      </div>
+    
+        <main>
+        <div class='col-md-8 offset-md-1'>
+        <%= render 'searches/search' %>
+        </div>
         <p id="notice"><%= notice %></p>
         <%= yield %>
+        
       </main>
+     </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
