--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,7 +16,12 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <td>
+           <td id = "favorite_<%= book.id %>">
+        <%= render partial: "favorites/favorite", locals: { book: book } %>
+        </td>
+          <%
+=begin
+%>
           <% if book.favorited_by?(current_user) %>
             <p>
               <%= link_to book_favorites_path(book), method: :delete do %>
@@ -31,6 +36,9 @@
             </p>
               <% end %>
           </td>
+<%
+=end
+%>
            <td>コメント数：<%= book.book_comments.count %></td>
       </tr>
     <% end %>
