--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -27,6 +27,9 @@
       <% end %>
     <% end %>
 </tr>
+<% if current_user != user && current_user.following?(user) && user.following?(current_user) %>
+  <%= link_to 'chatを始める', chat_path(user.id), class: "ml-3" %>
+<% end %>
 　
 <div class='row'>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
