--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -48,6 +48,7 @@
 =end
 %>
                    <td>コメント数：<%= @book.book_comments.count %></td>
+                   <td class="view-count">閲覧数: <%= @book_detail.view_counts.count %></td>
         </tr>
             </tbody>
           </table>
@@ -57,6 +58,7 @@
           <div id="comment_form">
             <%=render"book_comments/comment_form", book:@book, book_comment:@book_comment%>
           </div>
+
 <%
 =begin
 %>
