--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -18,6 +18,11 @@
   </tr>
   
 </table>
+<% if user.name != "guestuser" %>
+<div class='row'>
+  <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+</div>
+<% end %>
 <tr>
     <% if current_user != user%>
       <% if current_user.following?(user) %>
