応用課題c前

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -44,11 +44,11 @@
                     </p>
                       <% end %>
                   </td>
-<%
+<%3
 =end
 %>
                    <td>コメント数：<%= @book.book_comments.count %></td>
-                   <td class="view-count">閲覧数: <%= @book_detail.view_counts.count %></td>
+                   <td class="view-count">閲覧数: <%= @book.view_counts.count %></td>
         </tr>
             </tbody>
           </table>
